--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "curso-programacion-backend-proyecto-final",
-  "type": "module",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/app.js"
+    "start": "node src/app.js",
+    "dev": "node --watch ./src/app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "Joaquin Cejas",
@@ -14,6 +15,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "mongodb": "^7.0.0",
     "mongoose": "^7.5.3",
     "mongoose-paginate-v2": "^1.7.4",
     "multer": "^1.4.5-lts.1",
