--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Joaquin Cejas",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "mongodb": "^7.0.0",
