--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
   "author": "Joaquin Cejas",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "express-session": "^1.18.2",
     "mongodb": "^7.0.0",
     "mongoose": "^7.5.3",
     "mongoose-paginate-v2": "^1.7.4",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
   }
 }
