--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "Joaquin Cejas",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
