--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.18.2",
-    "mongodb": "^7.0.0",
+    "mongodb": "^6.9.0",
     "mongoose": "^7.5.3",
     "mongoose-paginate-v2": "^1.7.4",
     "multer": "^1.4.5-lts.1",
+    "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
+    "passport-local": "^1.0.0",
     "socket.io": "^4.7.2"
   },
   "devDependencies": {
