--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
-    "express-session": "^1.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.9.0",
     "mongoose": "^7.5.3",
     "mongoose-paginate-v2": "^1.7.4",
