--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^6.0.0",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
